// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<GroupBoxComponent /> snapshots > it matches the snapshot for Group Box style 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; position: absolute; padding: 0px 10px 10px 10px; box-sizing: border-box;"
  >
    <fieldset
      class="MuiBox-root css-hz4gww"
    >
      <legend>
        Test
      </legend>
      <div
        style="position: relative; overflow: visible; color: black;"
      />
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`<GroupBoxComponent /> snapshots > it matches the snapshot for Line style 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; position: absolute; padding: 0px; box-sizing: border-box;"
  >
    <fieldset
      class="MuiBox-root css-l9ytoe"
    >
      <div
        style="position: relative; overflow: visible; color: black;"
      />
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`<GroupBoxComponent /> snapshots > it matches the snapshot for Title Bar style 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; position: absolute; padding: 0px; box-sizing: border-box;"
  >
    <fieldset
      class="MuiBox-root css-l9ytoe"
    >
      <div
        style="height: 20px; width: 100%; background-color: rgb(0, 0, 0); font-family: Liberation sans,sans-serif; font-weight: normal; font-style: normal; font-size: 1rem; text-align: left; color: rgb(0, 0, 0);"
      >
        Title
      </div>
      <div
        style="position: relative; overflow: visible; color: black;"
      />
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`<GroupBoxComponent /> snapshots > it matches the snapshot for no style 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; position: absolute; padding: 0px; box-sizing: border-box;"
  >
    <fieldset
      class="MuiBox-root css-1qwcvmb"
    >
      <div
        style="position: relative; overflow: visible; color: black;"
      />
    </fieldset>
  </div>
</DocumentFragment>
`;
